<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SplashActivity">

    <TextView
        android:id="@+id/tv_logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="drop\nhere"
        android:textAllCaps="true"
        android:textColor="@color/colorLogo"
        android:textSize="54sp"
        app:layout_constraintBottom_toTopOf="@id/tv_splash_desc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_splash_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/roboto"
        android:text="@string/tv_splash_info"
        android:textColor="@color/colorText"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ic_dropbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/ic_dropbox"
        android:src="@drawable/ic_dropbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_splash_desc" />

    <ImageView
        android:id="@+id/ic_drive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/ic_drive"
        android:src="@drawable/ic_drive"
        app:layout_constraintStart_toEndOf="@id/ic_dropbox"
        app:layout_constraintTop_toBottomOf="@id/tv_splash_desc" />

    <TextView
        android:id="@+id/tv_powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/tv_powered_by"
        android:textColor="@color/colorLogo"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/ic_bcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ic_bcc"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/ic_bcc"
        android:src="@drawable/ic_bcc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>